fix(gitignore): fix .gitignore

--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -10,10 +10,10 @@ venv/
 .env/
 
 # SQLite database
-#db.sqlite3
+db.sqlite3
 
 # Logs
-#*.log
+*.log
 
 # Django static files
 /static/
@@ -24,3 +24,5 @@ venv/
 
 .idea
 .idea/
+
+test.py
