--- a/system_monitoring/package.json
+++ b/system_monitoring/package.json
@@ -9,11 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.9.0",
     "axios": "^1.7.7",
     "next": "14.2.15",
     "react": "^18",
     "react-dom": "^18",
-    "react-spinners": "^0.14.1"
+    "react-hook-form": "^7.53.1",
+    "react-spinners": "^0.14.1",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "postcss": "^8",
