--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,16 +1,16 @@
 FROM python:3.12-slim
 
-ENV PYTHONDONTWRITEBYTECODE=1
-ENV PYTHONUNBUFFERED=1
-
 WORKDIR /app
 
-COPY requirements.txt /app/
-RUN pip install --no-cache-dir -r requirements.txt
+RUN apt-get update \
+    && apt-get install -y build-essential libpq-dev \
+    && rm -rf /var/lib/apt/lists/*
 
 COPY . /app/
 
+RUN pip install --no-cache-dir -r requirements.txt
+
 EXPOSE 8000
 
-
-CMD ["python", "manage.py", "runserver", "0.0.0.0:8000"]
+# Run the server (or Gunicorn, for production use)
+CMD ["gunicorn", "backend.wsgi:application", "--bind", "0.0.0.0:8000"]
