--- a/system_monitoring/package.json
+++ b/system_monitoring/package.json
@@ -12,6 +12,8 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.1",
+    "@tanstack/react-query": "^5.62.2",
+    "@tanstack/react-query-devtools": "^5.62.2",
     "axios": "^1.7.7",
     "chart.js": "^4.4.7",
     "jwt-decode": "^4.0.0",
