--- a/local_back/.gitignore
+++ b/local_back/.gitignore
@@ -32,3 +32,7 @@ test.py
 identifier.sqlite
 
 road.txt
+
+local_back/__pycache__/*
+local_back/shared/utils/__pycache__/*
+local_back/shared/zabbix_service/__pycache__/*
